# auth0-fastapi-sample

./: .dockerignore  .env.example  .gitignore  README.md  dockerfile  justfile  pyproject.toml
application/: auth.py  config.py  main.py  utils.py
auth0_fastapi_sample/: auth.py  main.py
fake_auth0/: .dockerignore  README.md  justfile  pyproject.toml
fake_auth0/fake_auth0/: main.py
tests/: auth_test.py  conftest.py
tests/integration/: integration_test.py
tests/unit/: auth_test.py
