[tool.poetry]
name = "auth0_fastapi_sample"
version = "0.1.0"
description = "Auth0 Python FastAPI Sample"
authors = ["fitzypop <32967490+fitzypop@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/fitzypop/auth0-python-fastapi-sample"

[tool.poetry.dependencies]
python = "^3.12"
# auth0-python = "^4.3.0" # management api package
fastapi = { extras = ["all"], version = "^0.110.2" }
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"
uvicorn = { extras = ["standard"], version = "^0.29.0" }


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["N818"]
select = [
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "E",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "N",
    "W",
    "PIE",
    "RET504",
    "SIM",
    "T20",
    "UP",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
